@@ -1,4 +1,6 @@
 0.93    Added - weathermap-cacti-plugin.php?action=viewmap&id=mapfilename  works as well as a map number - useful for crosslinks
+        FIXED - the key_hidezero secret setting hides the zero in a gradient in a classic scale too.
+        CHANGE - the auth realm names for Cacti have been changed to match ReportIt and Aggregate - easier to tell who does what
         
 
 0.92 - FIXED weathermap CLI help said --random-data instead of --randomdata
